--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer components {
+  .setting__tab {
+    @apply px-2 sm:px-3 lg:px-4 py-3 flex items-center gap-x-2 w-full justify-center md:justify-start;
+  }
+  .setting__tab-text {
+    @apply hidden md:inline-flex leading-4 text-sm font-medium;
+  }
+}
 
 body {
   background-color: #fafafa;
